Fix overflow-x on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -83,8 +83,6 @@
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
     line-height: normal;
-
-    overflow-x: hidden;
   }
 
 
